<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="19dp"
    android:layout_marginStart="25dp"
    android:orientation="vertical"
    tools:context=".VentasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="126dp"
            android:layout_weight="1"
            android:src="@drawable/ventas" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_salesrecord"
            android:textColor="#303F9F"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_code"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextCodigoRegistroVenta"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_datesale"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextFechaVenta"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ccvenditor"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextCcVendedor"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_dataclient"
            android:textColor="#512DA8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_clientname"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ccclient"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextCcCliente"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextDireccionCliente"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_latitude"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextLatitudCliente"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/text_length"
            android:textColor="#0288D1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextLongitudCliente"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_curtaindata"
            android:textColor="#512DA8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_curtaintype"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextTipoCortina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_width"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextAnchoCortina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_high"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextAltoCortina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_area"
            android:textColor="#0288D1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextAreaCortina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_purchasedata"
            android:textColor="#512DA8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_curtainvalue"
            android:textColor="#1976D2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextValorCortina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_paiddata"
            android:textColor="#1976D2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextAbonoCortina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_weeklyfeevalue"
            android:textColor="#1976D2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextValorCuotaSemanal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_balance"
            android:textColor="#1976D2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextTextSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/button_savesale" />
    </LinearLayout>
</LinearLayout>