<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="22dp"
    android:layout_marginStart="40dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="307dp"
            android:layout_height="154dp"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/appventas" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="22dp"
            android:layout_marginStart="22dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:scrollbarDefaultDelayBeforeFade="500"
            android:scrollbarFadeDuration="500"
            android:scrollbarStyle="outsideInset"
            android:text="@string/Welcome_app"
            android:textColor="#4464C3"
            android:textColorHint="#854040"
            android:textSize="24sp"
            android:verticalScrollbarPosition="defaultPosition" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/text_username"
            android:textColor="#5064C1"
            android:textColorHint="#3F51B5"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextNonmbreUsuario"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="243dp"
            android:layout_height="46dp"
            android:text="@string/text_password"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/editTextContraseñaUsuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="22dp"
            android:text="@string/button_login"
            android:textColor="#78EAD8"
            android:textColorHint="#2196F3" />

    </LinearLayout>

</LinearLayout>